    - improved parser recovery after too many closing braces
  * when cloning a configuration in the configuation manager, debug info settings were lost
  * compiling a single file now reports success
  * avoid asking to save project file when closing VS and the project has already been saved
  * fixed crashes due to bug in precise GC with arrays just below page size
  * adjusted JSON interpretation for symbol lookup and parameter tooltips to new format in dmd 2.062
  * some tweaks to C++ to D converter
  * basic LDC support
  * added new option pages for DMD/GDC/LDC directories
  * linker messages from GDC can now be demangled aswell
  * additional command line arguments now placed at the very end to avoid GDC linker troubles
  * DParser by Alexander Bothe (https://github.com/aBothe/D_Parser) integrated as an alternative
    semantic engine
  * added command "Compile and Run" to execute current text buffer or selection via rdmd
  * added command "Open Language Options" for easier access to the settings page
  * added option "Colorize coverage from .LST file" to highlight lines from code coverage output

unreleased Version 0.3.37

  * installs with cv2pdb 0.27 which fixes a crash when converting DWARF from GDC 4.8
  * editor always started with coverage highlighting enabled
  * added command "Open Folder in Windows Explorer" to project and folder context menu
  * fixed regression: VS 2010/2012 extension pkgdef files almost empty
  * installer now has workaround for x64 debugger of Visual Studio 2012 Shell 
  * DParser: updated to recent version, enabled mixin analysis, respect deprecation flag
  * "Compile and Run" no longer adds "--main" automatically, removed some other implicite 
    command line options that confused rdmd, fixed quotes in --eval arguments
  * Colorize coverage: disabled if lst file older than source file, tweaked line number translation
  * update DParser, now mixin-analysis enabled, pass -deprecated to analysis
  